syntax = "proto3";

package proto.zion.v1;

option go_package = "github.com/getzion/relay/gen/zion/v1";

import "proto/protoc-gen-gorm/options/gorm.proto";

message Comment {
  option (gorm.opts).ormable = true;
  // The community's unique ID (primary key)
  int64 id = 1 [(gorm.field).tag = {
    unique: true
    primary_key: true
  }];
  // Comment ID unique across Zion - Required; must be uuid v4
  string zid = 2 [(gorm.field).tag = { not_null: true }];
  // DID of user who sent this comment - Required
  string user_did = 3 [(gorm.field).tag = { not_null: true }];
  // Main message body - Optional if link is non-null, otherwise required
  string text = 4;
  // URL link to external piece of content - Optional if text is non-null, otherwise required
  string link = 5;
  // Created when? - Required
  int64 created = 6;
  // Updated when? - Optional
  int64 updated = 7;
  // Deleted - Optional, defaults 0
  bool deleted = 8 [(gorm.field).tag = { default: "false" }];
}
