syntax = "proto3";

package proto.zion.v1;

option go_package = "github.com/getzion/relay/gen/zion/v1";

import "proto/protoc-gen-gorm/options/gorm.proto";
import "proto/zion/v1/messages.proto";

message Conversation {
  option (gorm.opts).ormable = true;
  // The community's unique ID (primary key)
  int64 id = 1 [(gorm.field).tag = {
    unique: true
    primary_key: true
  }];
  // Conversation ID unique across Zion - Required; must be uuid v4
  string zid = 2;
  // Zion ID of the community this conversation belongs to - Required; must be uuid v4
  string community_zid = 3;
  // The Message that starts the conversation - Required
  Message message = 4;
  // Is this conversation publicly visible? - Optional; defaults to false
  bool public = 5;
  // Price in sats for non-community members to read, if public = true - Optional; defaults to 0
  int64 public_price = 6;
}
